# tehnick-yac

./: .gitignore  README.md
Algorithm-2021/: CMakeLists.txt  README.html  README.md
Algorithm-2021/PracticeRound-A/: PracticeRound-A.pro  README.md  main.cpp
Algorithm-2021/PracticeRound-B/: PracticeRound-B.pro  README.md  main.cpp
Algorithm-2021/PracticeRound-C/: README.md
Algorithm-2021/Qualification-A/: Qualification-A.pro  README.md  main.cpp
Algorithm-2021/Qualification-B/: README.md
Algorithm-2021/Qualification-C/: README.md
Algorithm-2021/Qualification-D/: README.md
Algorithm-2021/Qualification-E/: README.md
Algorithm-2021/Qualification-F/: README.md
Algorithm-2022/: CMakeLists.txt  Qualification-B.cpp  README.html  README.md  style.css
Backend-2021/: CMakeLists.txt  Qualification-A.cpp  README.html  README.md
Backend-2021/Qualification-A/: Qualification-A.pro  README.md
Backend-2021/Qualification-A/tests/: answer.txt  input.txt
Backend-2021/Qualification-B/: README.md
Backend-2021/Qualification-C/: Qualification-C.pro  README.md  main.cpp
Backend-2021/Qualification-D/: README.md
Backend-2021/Qualification-D/tests/: README  input.txt
Backend-2021/Qualification-E/: Qualification-E.pro  README.md  main.cpp
Backend-2021/Qualification-F/: README.md
Backend-2021/Qualification-F/tests/: genres_in.sql
Backend-2022/: CMakeLists.txt  Qualification-A.cpp  Qualification-C.cpp  Qualification-E.cpp  README.html  README.md
Backend-2023/: CMakeLists.txt  Qualification-E.cpp  README.html  README.md
(+3 files in other folders)
